fix control section mobile img size

--- a/component/Control/control.css
+++ b/component/Control/control.css
@@ -42,6 +42,7 @@
     flex-direction: column;
   }
   .control_img > img {
-    width: 400px;
+    width: 350px;
+    padding: 0 2%;
   }
 }
